# external-module-template

./: .clang-format  .clangd  .gitignore  .gitmodules  Kbuild  Kbuild.in  Kconfig  Makefile  README.md  README.zh_CN.md  autogen.sh  configure  configure.ac
.github/: dependabot.yaml
.github/workflows/: cd.yaml  ci.yaml
include/: template.h
scripts/: ls-todo.sh
src/: template.c  template_test.c
